assets/scss/app.scss
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/*
    Created on : Sep 10, 2019, 2:35:50 PM
    Author     : César de la Cal Bretschneider <cesar@magic3w.com>
*/

@import "_/_.scss";
@import "_autocomplete.scss";

template {
	display: none;
}

.frm-ctrl {
	border: none;
}

input[type="text"] {
	&:focus, &:active {
		box-shadow: none;
		border: none;
	}
}

input[type="text"], select {
	font-size: .8rem !important;
	line-height: 1.2rem;
	background: #F7F7F7;
	height: 2.6rem;
	font-family: inherit;
}


.shadow-input.outer {
	@extend .frm-ctrl;
	font-size: .8rem !important;
	line-height: 1.2rem;
	background: #F7F7F7;
	height: 2.6rem;
	font-family: inherit;
}

.shadow-input.inner,
.shadow-input.shadow {
	display: inline-block;
	vertical-align: middle;
	font-size: .8rem !important;
	line-height: 1.2rem;
	height: 2.6rem;
	font-family: inherit;
	padding: .75rem 0rem .75rem .5rem;
}

.shadow-input.shadow {
	color: #AAA;
	padding: .75rem .5rem .75rem 0rem;
}

.faux-field {
	border: solid 1px #FAFAFA;
	background: #FAFAFA;
	color: #555;
	border-radius: 3px;
	font-size: .8rem !important;
	line-height: 1.2rem;
	height: 2.6rem;
	font-family: inherit;
	display: inline-block;
	font-family: inherit;
	display: block;
	-moz-appearance: none;
	appearance: none;
	padding: .75rem .4rem;
	width: 100%;
	font-weight: bold;
	font-size: 1rem;
}

.padding-correction {
	padding: .8rem;
	line-height: 1.2rem;
	height: 2.6rem;
	font-family: inherit;
}

.row {
	max-width: 95%;
}

.span {
	overflow-x: visible;
}


body, html{
	width: 100%;
	height: 100%;
	margin: 0;
	padding : 0;
	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}

* {
	box-sizing: border-box;
}

.wrapper {
	margin: 0 auto;
	width: 100%;
	max-width: 30rem;
	border-radius: 3px;
	background: #FFF;
	box-shadow: 0 0 3px rgba(0, 0, 0, .3);
	
	&.transparent {
		box-shadow: none;
		background: transparent;
	}
}

#map {
	position: relative;
	overflow: hidden;
	border-radius: 3px;
	box-shadow: 0 0 2px #CCC;
}

#map img {
	width: 100%;
	vertical-align: middle;
}

.discovery-form {
	background: rgba(255, 255, 255, 0.95);
	margin: 0 auto;
	padding: 1.3rem;
	transition: height .7s ease, padding .7s ease;
}

.discovery-form-header {
	position: absolute;
	top: 15%;
	left: .3rem;
	transition: top .7s ease, left .7s ease;
	white-space: nowrap;
	
	animation: .6s grow;
}

@keyframes grow {
	  0% { opacity: 0; }
	100% { opacity: 1; }
}

.dot {
	display: inline-block;
	width: 1.8rem;
	height: 1.8rem;
	vertical-align: middle;
	background-color: #48aeff;
	border: solid 5px #FFF;
	border-radius: 50%;
	box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
	transition: background-color .7s ease;
}


.discovery-form-header .dot.business {
	background-color: #856dff;
}

.discovery-form-header .country {
	font-size: 1rem;
	font-weight: bold;
	color: #444;
	box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
	vertical-align: middle;
	display: inline-block;
	white-space: nowrap;
	text-overflow: ellipsis;
	background: #FFF;
	border-radius: .9rem;
	padding: .4rem .8rem;
}

#target {
	display: block;
}

#reason {
	font-weight: bold;
	color: #888;
}

a {
	color: #48aeff;
	text-decoration: none;
}

input[type="text"] {
	font-family: inherit;
	display: block;
	-moz-appearance: none;
	appearance: none;
	padding: .75rem .4rem;
	width: 100%;
	border: none;
	color: #444;
	font-size: 1rem;
}

input[type="submit"] {
	border: solid 1px #48aeff;
	background: #48aeff;
	color: #FFF;
	padding: .3rem .7rem;
	border-radius: 3px;
	font-weight: bold;
}


.stop {
	height: 3rem;
	margin: 0 auto;
	max-width: 30rem;
	padding: .5rem 0;
	overflow: hidden;
	color: #555;
	position: relative;

	animation: stoppopup .7s;
	animation-timing-function: linear;
	animation-iteration-count: 1;
}

.stop .caption {
	vertical-align: middle;
}

.stop .dot {
	position: relative;
	z-index: 2;
	box-shadow: 0 0 3px rgba(0, 0, 0, .3);
}

@keyframes stoppopup {
	0% { height: 0rem; background-color: #FFF; padding: 0 0rem;}
	50% { background-color: #F99; }
	100% { height: 3rem; background-color: transparent;
	padding: .5rem 0rem;}
}

.passport-img-wrapper {
	max-height: 120px;
	overflow: hidden;
}

#passport-image {
	width: 100%;
	height: auto;
}

#target-country-form {
	//border-bottom: solid 1px #206596;
}

.visa-result {
	padding: .9rem .8rem;
}
.visa-result:after {
	content: '';
	display: table;
	clear: both;
}

.buy-now, .button {
	display: inline-block;
	text-align: right;
	border: solid 1px #01b1d7;
	background: #01b1d7;
	color: #FFF;
	padding: .3rem .7rem;
	border-radius: 3px;
	font-weight: bold;
	cursor: pointer;
	transition: background-color .5s ease;
	
	&.fixed-height {
		height: 2.6rem;
		padding: .8rem .7rem;
		line-height: 1.0rem;
	}
	
	&.disabled {
		background-color: #CCC;
		border: solid 1px #bbb;
	}
	
	&.grey {
		border: solid 1px #DDD;
		background-color: #EEE;
		color: #555;
	}
}

.visa-result .buy-now.unneeded {
	background: transparent;
	border: none;
	color: #888;
}

.visa-result .title {
	display: block;
	font-size: .95rem;
	font-weight: bold;
	color: #555;
}

.visa-result .description {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	display: block;
	color: #555;
	font-size: .8rem;
	padding: .3rem 0;
}

.separator {
	border-top: solid 1px #CCC;
	
	&.dashed {
		border-top-style: dashed;
	}
	
	&.dotted {
		border-top-style: dashed;
	}
}


.considerations {
	padding: 0.3rem 0 .3rem 1rem;
	transition: opacity .7s;
}

.consideration .icon {
	width: 32px;
	margin: .7rem;
}

.consideration .caption {
	display: block;
	color: #333;
}

.consideration .description {
	display: block;
	color: #555;
	font-size: .8rem;
	overflow: hidden;
	cursor: pointer;
	
	&.limited {
		max-height: 80px;
		position: relative;
		
		&:after {
			content: 'Mehr anzeigen';
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			text-align: center;
			color: #0eadd7;
			background: #FAFAFA;
		}
	}
}

.consideration:after {
	content: '';
	display: table;
	clear: both;
}

/*
 * Multi-person specific
 */
.avatar {
	max-width: 100%;
	width: 2rem;
	margin: .1rem;
	height: auto;
	vertical-align: middle;
}

.person {
	padding: .7rem 1.3rem;
	border-top: solid 1px #DDD;
	animation-name: personpopup;
	animation-duration: .3s;
	animation-iteration-count: 1;
}

.person:nth-child(2n) {
	background: #F8F8F8;
}

.person:first-child {
	border-top: none;
}

.person .person-name {
	font-weight: bold;
	vertical-align: middle;
}

.person .flag {
	max-width: 100%;
	width: 1.6rem;
	margin: .3rem;
	height: auto;
	border-radius: 50%;
	vertical-align: middle;
	float: right;
	border: solid 1px #BBB;
	box-shadow: 0 0 5px #CCC;
}


@keyframes personpopup {
	0% { height: 0rem; background-color: #FFF; padding: 0 1.3rem;}
	50% { background-color: #F99; }
	100% { height: 3rem; background-color: transparent;
	padding: .5rem 1.3rem;}
}

h2 {
	color: #888;
	font-size: 1.2rem;
	max-width: 30rem;
	margin: .3rem auto;
	padding: 0 1rem;
}

h3 {
	color: #999;
	font-size: 1rem;
	margin: .3rem 0 0;
}

p {
	padding: 0 1rem;
	line-height: 1.5em;
}

.info-message {
	padding: 1.5rem;
	background-color: #eef9fb;
	color: #0eadd7;
	position: relative;
	
	&:before {
		position: absolute;
		bottom: 100%;
		left: 20px;
		content: '';
		height: 0;
		width: 0;
		border-style: none solid solid solid;
		border-color: transparent transparent #eef9fb transparent;
		border-width: 14px;
	}
}

.highlight {
	font-weight: bold;
}

.secondary {
	font-size: .9rem;
	color: #555;
}

input[type=text] {
	padding-right: 30px;
	background-image: url('../img/edit.png');
	background-repeat: no-repeat;
	background-position: center right 4px;
	background-size: 16px 16px;
}

.clickable {
	cursor: pointer;
}

.spinner {
	display: inline-block;
	height: 1.4rem;
	width: 1.4rem;
	border-radius: 50%;
	border: solid 5px #AFCFE6;
	border-top: solid 5px #3B89C1;
	animation: linear 1s rotate360 infinite;
	vertical-align: middle;
}

@keyframes rotate360 {
	  0% { transform: rotate(000deg); }
	100% { transform: rotate(360deg); }
}

.idle {
	.when-busy { display: none; }
}

.busy {
	.when-idle { display: none; }
}

